<resources>

    <string name="app_name">Call Screen OS15</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="all">All</string>
    <string name="apply">Apply</string>
    <string name="block">Block Contact</string>
    <string name="block_content">You will not receive phone calls from people on the block list.</string>
    <string name="block_numbers">Block Numbers</string>
    <string name="block_this_caller">Block this Caller</string>
    <string name="call">Call</string>
    <string name="calling">Calling…</string>
    <string name="cancel">Cancel</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="choose">Choose</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All Recents</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="contacts">Contacts</string>
    <string name="content_apps">Refer to other applications</string>
    <string name="content_exit">Do you sure you want to exit?</string>
    <string name="content_setting">We could not open the dialog box automatically so that you can choose the application to be the default. You have to install it manually:\nSettings -&gt; Applications -&gt; Advanced-&gt; Select default applications -&gt; Call -&gt; Call Phone12</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="dark_mode">Dark mode</string>
    <string name="default_dialer">Default dialer</string>
    <string name="define_roundedimageview" />
    <string name="delete">Delete</string>
    <string name="do_you_love_this_app">Do you love this app?</string>
    <string name="don_t_show_again">Don\'t show again</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="edit">Edit</string>
    <string name="empty">Empty</string>
    <string name="end">End</string>
    <string name="end_call">END CALL</string>
    <string name="enter_name">Enter name</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="export_file">Export File</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fake">Fake call</string>
    <string name="fake_content">FakeCall is a useful tool when you want to get rid of someone. When you feel uncomfortably - pretend that someone is calling to you! You can set up a fake call and receive it as a real one</string>
    <string name="favorites">Favorites</string>
    <string name="feedback">Feedback</string>
    <string name="friday">Friday</string>
    <string name="go_to_grant">GO TO GRANT</string>
    <string name="grant">GRANT</string>
    <string name="hide">Hide</string>
    <string name="hold">Hold</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="keypad">Keypad</string>
    <string name="loading">Loading</string>
    <string name="mail">Mail</string>
    <string name="main_setting">Main Setting</string>
    <string name="message">Message</string>
    <string name="missed">Missed</string>
    <string name="monday">Monday</string>
    <string name="more_apps">More Apps</string>
    <string name="more_apps_setting">More Apps</string>
    <string name="mute">Mute</string>
    <string name="no_email">There are no email clients installed.</string>
    <string name="no_internet">No internet</string>
    <string name="ok">OK</string>
    <string name="per_call_log">Call Phone Permission</string>
    <string name="per_call_log_c">Please grant Call Phone permission to allow the App to start.</string>
    <string name="per_contact">Access Contacts Permission</string>
    <string name="per_contact_c">Please grant Contacts permission to allow the App to get Contacts from Phonebook.</string>
    <string name="per_sd">Access to Device Storage</string>
    <string name="per_sd_c">Please grant Storage permission to allow the App to share Contacts as vCards(VCF Files).</string>
    <string name="phone">Phone</string>
    <string name="photo">Photo</string>
    <string name="play">Play</string>
    <string name="pro_content">Please update to the Pro version to use this function.</string>
    <string name="pro_title">Update Pro version</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_cancel">Cancel</string>
    <string name="rate_now">Rate Now</string>
    <string name="rating_for_me">Rate App</string>
    <string name="rec">Rec</string>
    <string name="rec_on">Rec ON</string>
    <string name="recents">Recents</string>
    <string name="recording_list">Recorder List</string>
    <string name="reminds_me">Reminds me</string>
    <string name="reset_app">Please restart the app to be applied</string>
    <string name="ringing">Ringing</string>
    <string name="saturday">Saturday</string>
    <string name="search">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="send_message">Send Message</string>
    <string name="setting">Setting</string>
    <string name="slide_to_answer">slide to answer</string>
    <string name="sound_pad">Keyboard sound</string>
    <string name="speaker">Speaker</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="style">Style</string>
    <string name="sunday">Sunday</string>
    <string name="swipe_down_to_reject">Swipe down to reject</string>
    <string name="swipe_up_to_answer">Swipe up to answer</string>
    <string name="thursday">Thursday</string>
    <string name="title_default">To receive and make calls, you need to set Call Phone12 as the default application</string>
    <string name="title_recorder">This function is not available from\nAndroid 10 onwards.</string>
    <string name="title_search_contact">Choose a contact to add to favorites</string>
    <string name="today">Today</string>
    <string name="tuesday">Tuesday</string>
    <string name="tv_delay">The fake call will appear after:</string>
    <string name="unblock_this_caller">Unblock this Caller</string>
    <string name="unknown">unknown</string>
    <string name="update">Update</string>
    <string name="video">Video</string>
    <string name="wednesday">Wednesday</string>
    <string name="yesterday">Yesterday</string>
</resources>
