<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_status"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_warning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/pro_content"
            android:textColor="#939393"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/sel_btn_success"
            android:gravity="center_horizontal"
            android:padding="6dp"
            android:text="@string/pro_title"
            android:textColor="#029e00"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/sel_btn_error"
            android:gravity="center_horizontal"
            android:padding="6dp"
            android:text="@string/cancel"
            android:textColor="#d41558"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
