<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical">

    <com.demo.example.OS.custom.FullScreenVideoView
        android:id="@+id/vv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#68000000" />

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.demo.example.OS.custom.BoldText
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="25sp" />

        <View
            android:id="@+id/v_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/im_title"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon512"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.demo.example.OS.custom.MediumText
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ringing"
            android:textColor="#fff"
            android:textSize="15sp" />

        <View
            android:id="@+id/v_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible" />
    </LinearLayout>

    <com.demo.example.OS.custom.BoldText
        android:id="@+id/tv_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/sel_dialog_ios"
        android:gravity="center_horizontal"
        android:onClick="apply"
        android:padding="10dp"
        android:text="@string/apply"
        android:textColor="@color/c_selected"
        android:textSize="15sp" />
</RelativeLayout>
